fix: fix URL for adding product categories
